# DTE-3613-project

./: CMakeLists.txt  README.md  bezierClass.cpp  bezierClass.h  bulletDebugDrawer.h  camera.cpp  camera.h  clothoidTransitionPiece.h  flatBoardPiece.h  hermiteClass.cpp  hermiteClass.h  inputManager.cpp  inputManager.h  light.h  loopEntrancePiece.h  loopPiece.h  main.cpp  material.h  meshCreation.cpp  meshCreation.h  meshPipelineSetup.h  processShader.cpp  processShader.h  processVertices.cpp  processVertices.h  renderable.h  renderer.cpp  renderer.h  shader.h  shaderManager.h  skybox.h  spiralPiece.h  texture_utils.h  trackPiece.h  transitionPiece.h  verticalTransitionPiece.h
shaders/: skybox.frag  skybox.vert  sphere.frag  sphere.vert
